auth-service/overlays/prod/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service-v1
spec:
  template:
    spec:
      containers:
        - name: auth-service
          image: 100.107.74.15:5000/auth-service:prod-1790571
          imagePullPolicy: Always
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "500m"
