auth-service/overlays/prod/networking-patch.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: auth-gateway
spec:
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: auth-flyingjack-top-tls
      hosts:
        - "auth.flyingjack.top"
    - port:
        number: 80
        name: http
        protocol: HTTP
      tls:
        httpsRedirect: true
      hosts:
        - "auth.flyingjack.top"
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: auth-service
spec:
  hosts:
    - "auth.flyingjack.top"
