auth-service/overlays/prod/networking.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: auth-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: auth-flyingjack-top-tls
      hosts:
        - "auth.flyingjack.top"
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "auth.flyingjack.top"
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: auth-service
spec:
  hosts:
    - "auth.flyingjack.top"
  gateways:
    - auth-gateway
  http:
    - match:
        - uri:
            prefix: /oauth2/
        - uri:
            prefix: /.well-known/
      route:
        - destination:
            host: auth-service
            subset: v1
            port:
              number: 80
    - match:
        - uri:
            prefix: /api/
      rewrite:
        uri: /
      route:
        - destination:
            host: auth-service
            subset: v1
            port:
              number: 80
---
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: auth-service-rule
spec:
  host: auth-service
  trafficPolicy:
    loadBalancer:
      simple: RANDOM
  subsets:
    - name: v1
      labels:
        version: v1
